fix vertical overflow

--- a/resources/web/templates/x3d_playback.css
+++ b/resources/web/templates/x3d_playback.css
@@ -22,45 +22,58 @@ p {
 .title-container {
   position: relative;
   background-color: #34495e;
-  height: 75px;
-  box-shadow: 0 -15px 15px 15px rgba(0,0,0,0.4);
+  height: 65px;
+  box-shadow: 0 -15px 15px 15px rgba(0, 0, 0, 0.4);
   background-image: url("https://cyberbotics.com/assets/images/webots.png");
   background-repeat: no-repeat;
-  background-position: 12px 14px;
-  background-size: 45px;
+  background-position: 16px 11px;
+  background-size: 40px;
   z-index: 1;
 }
 
 .title-container h1 {
   padding-left: 70px;
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 300;
   color: #fafafa;
   position: absolute;
 }
 
+.webots-view-container {
+  position: relative;
+  height: calc(0.8 * (100vh - 115px));
+  width: calc(100% + 2px);
+  box-shadow: 0 -5px 25px 20px rgba(255, 255, 255, 1);
+}
+
 .description-container {
-  padding: 8px 16px;
   min-height: 10%;
   background-color: #fafafa;
-  min-height: calc(25vh - 151px);
+  height: calc(0.2 * (100vh - 115px));
+  overflow: auto;
+  padding: 10px;
 }
 
 .description-container p {
   margin-right: 25%;
+  margin-bottom: 40px;
 }
 
 .bottom-container {
+  position: fixed;
+  height: 50px;
+  bottom: 0;
+  width: 100%;
   background-color: #34495e;
-  height: 52px;
-  padding-right: 20px;
-  padding-top: 8px;
-  text-align: right;
+  box-shadow: 0 0px 25px 20px rgba(255, 255, 255, 1);
+  margin: auto;
 }
 
 .bottom-container p {
   color: #fafafa;
   font-size: 14px;
+  padding-top: 3px;
+  padding-left: 16px;
 }
 
 .bottom-container a {
